Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85817

crash on resize

    XMLWordPrintable

Details

    • Bug
    • Status: Closed
    • P1: Critical
    • Resolution: Done
    • 5.15.0
    • 5.15.1
    • WebEngine
    • None
    • Linux/X11, Windows
    • 99a668c324218a1fab4824a9707194ff38df6dfe (qt/qtwebengine/5.15)

    Description

      It's either DCHECK FATAL:scoped_refptr.h(235)] Check failed: ptr_
      or just an access violation in release due to m_taskRunner being null.

      Stacktrace:
      qtwebengine/src/3rdparty/chromium/base/memory/scoped_refptr.h:235
      qtwebengine/src/core/compositor/display_gl_output_surface_qsg.cpp:93
      qtwebengine/src/core/compositor/display_frame_sink.cpp:136
      qtdeclarative/src/quick/items/qquickwindow.cpp:3840
      qtdeclarative/src/quick/items/qquickwindow.cpp:3585
      qtdeclarative/src/quick/items/qquickwindow.cpp:524
      qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:647
      qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:778
      qtdeclarative/src/quick/scenegraph/qsgthreadedrenderloop.cpp:1043

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              qt_webengine_team Qt WebEngine Team
              kiburtse Kirill Burtsev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes